# cursor-app

./: README.md
handcursor/: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
handcursor/src/handcursor/: __main__.py  app.py  camera.py  config.py  gestures.py  mapping.py  mouse.py  overlay.py  smoothing.py  tracker.py
handcursor/tests/: test_gestures.py  test_mapping.py  test_smoothing.py
